--- a/force-framework/force-demo/pom.xml
+++ b/force-framework/force-demo/pom.xml
@@ -16,20 +16,27 @@
     <properties>
         <java.version>1.8</java.version>
         <mybatis-boot.version>2.1.4</mybatis-boot.version>
+        <mybatis-plus-boot.version>3.4.3</mybatis-plus-boot.version>
         <druid-boot.version>1.2.5</druid-boot.version>
         <redisson-boot.version>3.13.3</redisson-boot.version>
+        <guava.version>30.1.1-jre</guava.version>
+        <jol.version>0.14</jol.version>
+        <netty.version>4.1.48.Final</netty.version>
+        <easyexcel.version>2.2.6</easyexcel.version>
+        <fastjson.version>1.2.75</fastjson.version>
+        <freemarker.version>2.3.30</freemarker.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
-            <version>4.1.48.Final</version>
+            <version>${netty.version}</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>easyexcel</artifactId>
-            <version>2.2.6</version>
+            <version>${easyexcel.version}</version>
         </dependency>
         <dependency>
             <groupId>com.quan</groupId>
@@ -39,12 +46,12 @@
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
-            <version>1.2.75</version>
+            <version>${fastjson.version}</version>
         </dependency>
         <dependency>
             <groupId>org.freemarker</groupId>
             <artifactId>freemarker</artifactId>
-            <version>2.3.30</version>
+            <version>${freemarker.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
@@ -54,7 +61,7 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>3.4.3</version>
+            <version>${mybatis-plus-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -79,16 +86,16 @@
         <dependency>
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
-            <version>0.14</version>
+            <version>${jol.version}</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>20.0</version>
+            <version>${guava.version}</version>
             <scope>compile</scope>
         </dependency>
-
 
     </dependencies>
 
