:art: today's leetcode

--- a/force-framework/force-elasticsearch/src/main/resources/application.yml
+++ b/force-framework/force-elasticsearch/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
   application:
     name: force-elasticsearch
-
+  elasticsearch:
+    rest:
+      uris:
+        - ${ES_URL}
+      username: elastic
+      password: ${ES_PWD}
