--- a/force-framework/force-elasticsearch/pom.xml
+++ b/force-framework/force-elasticsearch/pom.xml
@@ -11,17 +11,10 @@
     <artifactId>force-elasticsearch</artifactId>
     <description>Demo project for Spring Boot</description>
 
-    <properties>
-        <java.version>1.8</java.version>
-        <es.version>7.4.2</es.version>
-    </properties>
-
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.elasticsearch.client/elasticsearch-rest-high-level-client -->
         <dependency>
-            <groupId>org.elasticsearch.client</groupId>
-            <artifactId>elasticsearch-rest-high-level-client</artifactId>
-            <version>${es.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
         </dependency>
     </dependencies>
 
