--- a/force-framework/force-rocket/pom.xml
+++ b/force-framework/force-rocket/pom.xml
@@ -3,28 +3,29 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>force-ordinary</artifactId>
+        <artifactId>force-framework</artifactId>
         <groupId>com.quan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>force-rocketmq</artifactId>
+    <artifactId>force-rocket</artifactId>
 
     <properties>
-        <rocket.version>4.9.1</rocket.version>
+        <rocket-boot.version>2.2.1</rocket-boot.version>
+        <openmessaging.version>0.3.0-alpha</openmessaging.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-client</artifactId>
-            <version>${rocket.version}</version>
+            <artifactId>rocketmq-spring-boot-starter</artifactId>
+            <version>${rocket-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>io.openmessaging</groupId>
             <artifactId>openmessaging-api</artifactId>
-            <version>0.3.0-alpha</version>
+            <version>${openmessaging.version}</version>
         </dependency>
     </dependencies>
 </project>
