:art:  update freemarker generator code

--- a/force-framework/force-demo/src/main/resources/freemarker.properties
+++ b/force-framework/force-demo/src/main/resources/freemarker.properties
@@ -1,9 +1,6 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/javaweb?useUnicode=true&characterEncoding=utf8
+url=jdbc:mysql://192.168.3.39:30251/winkey_jinduo?useUnicode=true&characterEncoding=utf8
 username=root
 password=root
 basePackage=com.quan.demo.freemarker
-tableName=user
-
-outPrefixPath=/Users/forceoneself/IdeaProjects/force-to-live/force-framework/force-demo/src/main/java/com/quan/demo/freemarker/
-
+tableName=w_activity
