--- a/force-framework/force-demo/src/main/resources/mysql-java-wrapper.properties
+++ b/force-framework/force-demo/src/main/resources/mysql-java-wrapper.properties
@@ -1,5 +1,6 @@
-CHAR=String
+CHAR=java.lang.String
 VARCHAR=String
+MEDIUMTEXT=String
 LONGVARCHAR=String
 NUMERIC=java.math.BigDecimal
 DECIMAL=java.math.BigDecimal
@@ -8,9 +9,11 @@ BOOLEAN=Boolean
 TINYINT=Byte
 SMALLINT=Short
 INTEGER=Integer
+INT=Integer
 BIGINT=Long
 REAL=Float
-FLOAT=Double
+FLOAT=Float
 DOUBLE=Double
+DATETIME=java.util.Date
 DATE=java.util.Date
 TIMESTAMP=java.util.Date
