--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.quan</groupId>
-    <artifactId>force-to-live</artifactId>
+    <artifactId>force-oneself</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
