--- a/force-common/pom.xml
+++ b/force-common/pom.xml
@@ -5,7 +5,8 @@
     <parent>
         <artifactId>force-oneself</artifactId>
         <groupId>com.quan</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <artifactId>force-common</artifactId>
