--- a/force-framework/force-producer-core/pom.xml
+++ b/force-framework/force-producer-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.quan</groupId>
         <artifactId>force-framework</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
