--- a/force-framework/force-sharding/pom.xml
+++ b/force-framework/force-sharding/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>force-framework</artifactId>
         <groupId>com.quan</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <artifactId>force-sharding</artifactId>
