--- a/force-framework/pom.xml
+++ b/force-framework/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>force-oneself</artifactId>
         <groupId>com.quan</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
 
     <modules>
