--- a/force-ordinary/force-easy-rule/pom.xml
+++ b/force-ordinary/force-easy-rule/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>force-ordinary</artifactId>
         <groupId>com.quan</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
