--- a/force-wx/pom.xml
+++ b/force-wx/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <artifactId>force-oneself</artifactId>
         <groupId>com.quan</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <artifactId>force-wx</artifactId>
     <modelVersion>4.0.0</modelVersion>
