--- a/force-framework/force-generate/pom.xml
+++ b/force-framework/force-generate/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>force-framework</artifactId>
         <groupId>com.quan</groupId>
-        <version>1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -20,10 +20,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-freemarker</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
 </project>
