--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,22 @@
         </profile>
     </profiles>
 
+    <!-- 远程仓库地址 -->
+    <repositories>
+        <repository>
+            <id>nexus</id>
+            <name>Nexus Public Repository</name>
+            <url>http://101.43.20.134:8081/nexus/repository/maven-public/</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <!-- 部署jar包仓库 -->
     <distributionManagement>
         <repository>
             <id>force-oneself-releases</id>
@@ -76,6 +92,7 @@
         </snapshotRepository>
     </distributionManagement>
 
+    <!-- ${revision} 占位符多模块版本控制插件 -->
     <build>
         <plugins>
             <plugin>
