--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <jasypt-boot.version>3.0.1</jasypt-boot.version>
         <spring-boot.version>2.2.13.RELEASE</spring-boot.version>
         <maven-plugin.version>3.8.1</maven-plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencyManagement>
