--- a/force-jdk/pom.xml
+++ b/force-jdk/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>force-oneself</artifactId>
-        <groupId>com.quan</groupId>
-        <version>${revision}</version>
-    </parent>
+<!--    <parent>-->
+<!--        <artifactId>force-oneself</artifactId>-->
+<!--        <groupId>com.quan</groupId>-->
+<!--        <version>${revision}</version>-->
+<!--    </parent>-->
     <modelVersion>4.0.0</modelVersion>
-
+    <groupId>com.quan</groupId>
     <artifactId>force-jdk</artifactId>
     <packaging>jar</packaging>
 
