fix: litter code

--- a/force-framework/force-demo/src/main/resources/application.yml
+++ b/force-framework/force-demo/src/main/resources/application.yml
@@ -15,8 +15,8 @@ mybatis:
 
 ################### Spring config begin ###################
 spring:
-  application:
-    name: force-demo
+#  application:
+#    name: force-demo
   ################### Security config ###################
   security:
     user:
