--- a/force-framework/force-rocket/src/main/resources/application.yml
+++ b/force-framework/force-rocket/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 rocketmq:
-  name-server: 192.168.3.49:9876
+  name-server: 192.168.3.18:9876
   producer:
-    group: my-group
+    group: producer-group
     retry-times-when-send-failed: 2
     retry-times-when-send-async-failed: 0
     send-message-timeout: 300000
