--- a/force-framework/force-spring/pom.xml
+++ b/force-framework/force-spring/pom.xml
@@ -14,4 +14,11 @@
         <java.version>1.8</java.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.3</version>
+        </dependency>
+    </dependencies>
 </project>
