--- a/force-boot-starter/force-mvc-starter/pom.xml
+++ b/force-boot-starter/force-mvc-starter/pom.xml
@@ -18,5 +18,10 @@
             <groupId>com.quan</groupId>
             <artifactId>force-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.3</version>
+        </dependency>
     </dependencies>
 </project>
