--- a/force-framework/force-spring/pom.xml
+++ b/force-framework/force-spring/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>hutool-all</artifactId>
             <version>5.7.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>force-mvc-starter</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
