--- a/force-framework/force-spring/src/main/resources/application.yml
+++ b/force-framework/force-spring/src/main/resources/application.yml
@@ -7,4 +7,4 @@ server:
 force:
   servlet:
     crypto:
-      default-decryptor: com.quan.framework.spring.mvc.crypto.decrypt.RSADecryptor
+      decryptor: com.quan.framework.spring.mvc.crypto.decrypt.RSADecryptor
