--- a/force-boot-starter/pom.xml
+++ b/force-boot-starter/pom.xml
@@ -21,6 +21,10 @@
     </modules>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
         <!-- Aop支持 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
