remove: Remove dependency issues

--- a/force-cloud/force-cloud-commons/pom.xml
+++ b/force-cloud/force-cloud-commons/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.quan</groupId>
-        <artifactId>force-cloud-parent</artifactId>
+        <artifactId>force-cloud</artifactId>
         <version>${revision}</version>
     </parent>
 
@@ -14,15 +14,11 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-autoconfigure</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!-- Aop支持 -->
         <dependency>
