--- a/force-spring-framework/pom.xml
+++ b/force-spring-framework/pom.xml
@@ -21,6 +21,7 @@
         <module>force-rocket</module>
         <module>force-producer-core</module>
         <module>force-generate</module>
+        <module>force-wx</module>
     </modules>
 
     <artifactId>force-spring-framework</artifactId>
