--- a/force-core/force-tools/pom.xml
+++ b/force-core/force-tools/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>force-oneself</artifactId>
+        <artifactId>force-core</artifactId>
         <groupId>com.quan</groupId>
         <version>${revision}</version>
     </parent>
@@ -16,6 +16,7 @@
     <properties>
         <commons-lang3.version>3.12.0</commons-lang3.version>
         <slf4j.version>1.7.30</slf4j.version>
+        <jackson.version>2.10.5</jackson.version>
     </properties>
 
     <dependencies>
@@ -28,6 +29,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
@@ -44,6 +46,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
 
     </dependencies>
