--- a/force-ordinary/pom.xml
+++ b/force-ordinary/pom.xml
@@ -17,6 +17,7 @@
         <module>force-design-pattern</module>
         <module>force-easy-rule</module>
         <module>force-netty</module>
+        <module>force-reactive</module>
     </modules>
 
     <properties>
