--- a/force-boot-starter/force-mvc-starter/pom.xml
+++ b/force-boot-starter/force-mvc-starter/pom.xml
@@ -11,9 +11,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.quan</groupId>
+            <artifactId>force-boot-commons</artifactId>
         </dependency>
+
         <dependency>
             <groupId>com.quan</groupId>
             <artifactId>force-common</artifactId>
