--- a/force-cloud/force-cloud-openfeign/pom.xml
+++ b/force-cloud/force-cloud-openfeign/pom.xml
@@ -18,6 +18,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>force-cloud-commons</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
