--- a/force-spring-framework/force-demo/pom.xml
+++ b/force-spring-framework/force-demo/pom.xml
@@ -29,6 +29,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>force-mvc-starter</artifactId>
+            <version>${revision}</version>
+        </dependency>
+        <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-all</artifactId>
             <version>${netty.version}</version>
