--- a/force-boot-starter/force-mvc-starter/pom.xml
+++ b/force-boot-starter/force-mvc-starter/pom.xml
@@ -35,5 +35,21 @@
             <version>${guava.version}</version>
             <scope>compile</scope>
         </dependency>
+        <!-- 测试  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
