add: fix force-demo depend

--- a/force-spring-framework/force-demo/src/main/resources/application.yml
+++ b/force-spring-framework/force-demo/src/main/resources/application.yml
@@ -11,7 +11,7 @@ logging:
 ################### Mybatis config ###################
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
-  type-aliases-package: com.quan.*.entity
+#  type-aliases-package: com.quan.*.entity
 
 ################### Spring config begin ###################
 spring:
