--- a/force-boot-starter/force-boot-commons/pom.xml
+++ b/force-boot-starter/force-boot-commons/pom.xml
@@ -13,15 +13,15 @@
     <description>Spring Boot 通用依赖</description>
 
     <dependencies>
+        <!-- 通用工具 -->
+        <dependency>
+            <groupId>com.quan</groupId>
+            <artifactId>force-tools</artifactId>
+        </dependency>
         <!-- 自动配置  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-        <!-- Web服务  -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!-- 配置文件提示 -->
         <dependency>
@@ -30,4 +30,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
 </project>
