--- a/force-boot-starter/force-mvc-starter/pom.xml
+++ b/force-boot-starter/force-mvc-starter/pom.xml
@@ -9,31 +9,16 @@
     </parent>
     <artifactId>force-mvc-starter</artifactId>
 
-    <properties>
-        <guava.version>30.1.1-jre</guava.version>
-    </properties>
-
     <dependencies>
+        <!-- Boot 通用 -->
         <dependency>
             <groupId>com.quan</groupId>
             <artifactId>force-boot-commons</artifactId>
         </dependency>
-
+        <!-- Web服务  -->
         <dependency>
-            <groupId>com.quan</groupId>
-            <artifactId>force-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.7.3</version>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!-- 测试  -->
         <dependency>
