--- a/force-spring-framework/force-elasticsearch/pom.xml
+++ b/force-spring-framework/force-elasticsearch/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>lombok</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
