--- a/force-spring-framework/force-rocket/pom.xml
+++ b/force-spring-framework/force-rocket/pom.xml
@@ -38,5 +38,11 @@
             <artifactId>openmessaging-api</artifactId>
             <version>${openmessaging.version}</version>
         </dependency>
+        <!-- 测试  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
