--- a/force-spring-framework/pom.xml
+++ b/force-spring-framework/pom.xml
@@ -14,6 +14,7 @@
         <module>force-mongo</module>
         <module>force-redis</module>
         <module>force-spring</module>
+        <module>force-kafka</module>
         <module>force-document</module>
         <module>force-demo</module>
         <module>force-security</module>
