--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>force-cloud</module>
         <module>force-boot-starter</module>
         <module>force-core</module>
+        <module>force-spring-framework/force-kafka</module>
     </modules>
 
     <properties>
