--- a/force-spring-framework/force-demo/pom.xml
+++ b/force-spring-framework/force-demo/pom.xml
@@ -99,6 +99,11 @@
             <version>${guava.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
     </dependencies>
 
