--- a/force-cloud/force-cloud-commons/pom.xml
+++ b/force-cloud/force-cloud-commons/pom.xml
@@ -44,6 +44,7 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
+        <!-- Hystrix 熔断降级 -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
