--- a/force-cloud/force-cloud-openfeign/pom.xml
+++ b/force-cloud/force-cloud-openfeign/pom.xml
@@ -17,10 +17,12 @@
     </properties>
 
     <dependencies>
+        <!-- Force Cloud Commons -->
         <dependency>
             <groupId>com.quan</groupId>
             <artifactId>force-cloud-commons</artifactId>
         </dependency>
+        <!-- OpenFeign -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
