--- a/force-cloud/pom.xml
+++ b/force-cloud/pom.xml
@@ -2,16 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>force-oneself</artifactId>
-        <groupId>com.quan</groupId>
-        <version>${revision}</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
 
     <artifactId>force-cloud</artifactId>
-    <description>Spring Cloud demo</description>
+    <groupId>com.quan</groupId>
+    <version>${revision}</version>
+
+    <packaging>pom</packaging>
+
+    <description>Spring Cloud Micro Service</description>
 
     <modules>
         <module>force-cloud-commons</module>
@@ -22,13 +21,22 @@
     </modules>
 
     <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <!-- 项目版本 -->
+        <revision>1.0.0-SNAPSHOT</revision>
+
+        <!-- Jasypt 版本 -->
         <jasypt-boot.version>3.0.1</jasypt-boot.version>
+
+        <!-- Spring Boot & Spring Cloud & Spring Cloud Alibaba -->
         <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
         <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
         <spring-cloud-alibaba.version>2.2.7.RELEASE</spring-cloud-alibaba.version>
+
+        <!-- Plugin Version -->
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
         <maven-plugin.version>3.8.1</maven-plugin.version>
+        <flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -38,6 +46,12 @@
                 <groupId>com.quan</groupId>
                 <artifactId>force-cloud-commons</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <!-- Force Tool 依赖 -->
+            <dependency>
+                <groupId>com.quan</groupId>
+                <artifactId>force-tools</artifactId>
+                <version>${revision}</version>
             </dependency>
             <!-- Spring Cloud 版本依赖 -->
             <dependency>
@@ -75,19 +89,19 @@
     <build>
         <finalName>${project.artifactId}</finalName>
         <plugins>
-            <!-- jasypt maven plugin -->
+            <!-- Jasypt Maven Plugin -->
             <plugin>
                 <groupId>com.github.ulisesbocchio</groupId>
                 <artifactId>jasypt-maven-plugin</artifactId>
                 <version>${jasypt-boot.version}</version>
             </plugin>
-            <!-- spring boot plugin -->
+            <!-- Spring Boot Plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
             </plugin>
-            <!-- java编译插件 -->
+            <!-- Java 编译插件 -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -97,6 +111,33 @@
                     <target>${maven.compiler.target}</target>
                     <encoding>UTF-8</encoding>
                 </configuration>
+            </plugin>
+            <!-- ${revision} 占位符多模块版本控制插件 -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>flatten-maven-plugin</artifactId>
+                <version>${flatten-maven-plugin.version}</version>
+                <configuration>
+                    <!-- 更新父占位符 -->
+                    <updatePomFile>true</updatePomFile>
+                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>flatten</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>flatten.clean</id>
+                        <phase>clean</phase>
+                        <goals>
+                            <goal>clean</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
