--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <version>${revision}</version>
     <packaging>pom</packaging>
 
+    <developers>
+        <developer>
+            <name>Force-oneself</name>
+            <email>1044749290@qq.com</email>
+        </developer>
+    </developers>
+
     <modules>
         <module>force-common</module>
         <module>force-spring-framework</module>
@@ -25,6 +32,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven-plugin.version>3.8.1</maven-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <flatten-maven-plugin.version>1.2.7</flatten-maven-plugin.version>
+
     </properties>
 
     <dependencyManagement>
@@ -71,7 +80,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>flatten-maven-plugin</artifactId>
-                <version>1.2.7</version>
+                <version>${flatten-maven-plugin.version}</version>
                 <configuration>
                     <!-- 更新父占位符 -->
                     <updatePomFile>true</updatePomFile>
