--- a/force-boot-starter/pom.xml
+++ b/force-boot-starter/pom.xml
@@ -17,6 +17,9 @@
         <!-- Spring Boot 版本管理 -->
         <spring-boot.version>2.2.13.RELEASE</spring-boot.version>
 
+        <!-- 第三方框架 -->
+        <druid-boot.version>1.2.5</druid-boot.version>
+
         <!-- 第三方工具版本管理 -->
         <hutool.version>5.7.3</hutool.version>
         <commons-lang3.version>3.12.0</commons-lang3.version>
@@ -34,11 +37,13 @@
 
     <dependencyManagement>
         <dependencies>
+            <!-- Force Boot 公用模块 -->
             <dependency>
                 <groupId>com.quan</groupId>
                 <artifactId>force-boot-commons</artifactId>
                 <version>${project.version}</version>
             </dependency>
+            <!-- Force Tools 工具模块 -->
             <dependency>
                 <groupId>com.quan</groupId>
                 <artifactId>force-tools</artifactId>
@@ -65,11 +70,17 @@
                 <version>${commons-lang3.version}</version>
             </dependency>
             <!-- Google guava 工具 -->
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-        </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+            <!-- Druid 数据库连接池 -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid-boot.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
